# op-ring

./: CONTRIBUTING.md  README.md  op-ring.podspec  package.json  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/opring/: OpRingModule.kt  OpRingPackage.kt
cpp/: op-ring.cpp  op-ring.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/opring/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  Podfile
example/ios/OpRingExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/OpRingExample.xcodeproj/: project.pbxproj
example/ios/OpRingExample.xcodeproj/xcshareddata/xcschemes/: OpRingExample.xcscheme
example/ios/OpRingExample.xcworkspace/: contents.xcworkspacedata
example/ios/OpRingExampleTests/: OpRingExampleTests.m
example/src/: App.tsx
ios/: OpRing.h  OpRing.mm
src/: NativeOpRing.ts  index.tsx
